--- a/package.json
+++ b/package.json
@@ -5,17 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon": "nodemon index.js",
-    "start": "node index.js"
+    "build": "rollup -c"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^4.3.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+  "author": "Anas Oulahtak",
+  "license": "ISC"
 }
